# skyscraper

./: .gitignore  backup.py  converter.py  main.py  pyproject.toml  scraper.py  test.py  test2.py
assets/: hinos.csv
